--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "codecov": "^3.1.0",
+    "eslint": "^5.11.1",
     "jest": "^23.6.0"
   }
 }
