--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
     "codecov": "^3.1.0",
     "eslint": "^5.11.1",
     "jest": "^23.6.0"
+  },
+  "optionalDependencies": {
+    "crocks": "^0.11.1",
+    "daggy": "^1.3.0",
+    "redux-saga": "^0.16.2"
   }
 }
